# json-expression-parser

./: .gitignore  CMakeLists.txt  README.md  cmconf.bat  json_parser.cpp  json_parser.h  main.cpp  run_tests.bat
gtest/: CMakeLists.txt  core.h  parser_test.cpp  test_fail.cpp  test_pass.cpp
input/: 01-empty_key.json  test.json
input/string/: 01-unicode_letter.json
src/: json_eval.cpp  json_eval.h  json_parser.cpp  json_parser.h  json_types.h  main.cpp
